<resources>
    <!--    Login-->
    <string name="app_name">Learn Math</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_in_with">sign in with</string>

    <!--    Main Menu-->
    <string name="welcome_to">Welcome</string>
    <string name="learn_math">Learn Math</string>
    <string name="game">Quiz Game</string>
    <string name="Footer_text">Learn Math</string>
    <string name="About_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <!--    Calculator-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="divide">÷</string>
    <string name="multiple">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace"></string>
    <string name="display">Enter a value</string>
    <string name="back">back</string>

    <!--    game-->
    <string name="addition">Addition</string>
    <string name="times">Multiplication</string>
    <string name="division">Division</string>
    <string name="minus">Subtraction</string>
    <string name="start">Start</string>
</resources>