<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple4"
    tools:context=".CalculatorActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/percentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/red_bg"
                android:fontFamily="@font/poppins_bold"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="24sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exponentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/circle_bg"
                android:onClick="exponentBTN"
                android:text="@string/exponent"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/circle_bg"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/backspaceBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1.5"
                android:background="@drawable/circle_bg"
                android:contentDescription="backspace"
                android:onClick="backspaceBTN"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/backspace" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multipleBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="multipleBTN"
                android:text="@string/multiple"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:fontFamily="@font/poppins_regular"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusMinusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/equal_bg"
                android:onClick="equalBTN"
                android:text="@string/equals"
                android:textColor="#ffffff"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:autofillHints="null"
        android:inputType="none"
        android:background="@null"
        android:textColor="@color/purple2"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        android:maxLines="1"
        android:maxLength="18"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>