<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizGameActivity">


    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#3a7b99"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/topicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Math Quiz Game"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </RelativeLayout>

    <ImageView
        android:id="@+id/quizIcon"
        android:layout_width="wrap_content"
        android:layout_height="189dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:src="@drawable/quiz_icon" />

    <TextView
        android:id="@+id/chooseTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizIcon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:text="Choose Topic"
        android:textColor="#3a7b99"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseTopic"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/additionLayout"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/blue_bg"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:src="@drawable/add"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/addition"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/multiplicationLayout"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/blue_bg"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:src="@drawable/times"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/times"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/divisionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/blue_bg"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/divide"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/division"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/subtractionLayout"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/blue_bg"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/minus"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startQuizBtn"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/green_bg"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold">

    </androidx.appcompat.widget.AppCompatButton>


</RelativeLayout>