<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple4"
    tools:context=".MainMenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/layoutHeader"
        android:background="@drawable/header_bg"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/welcome_to"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/logo"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/welcome"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CalculatorLayout"
                android:layout_marginTop="50dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/calcu_logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Calculator"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/purple1"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GameLayout"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/CalculatorLayout"
                app:layout_constraintTop_toBottomOf="@id/CalculatorLayout">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/game_logo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/purple1"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/mainmenu_footer_bg"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/GameLayout"
                app:layout_constraintStart_toStartOf="@id/CalculatorLayout"
                app:layout_constraintTop_toBottomOf="@id/GameLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textFooter"
                    android:background="@drawable/white_bg"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="2dp"
                    android:text="@string/Footer_text"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="Learn"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="@id/textFooter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textFooter"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/About_text"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/textFooter"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>